AC_INIT([wrtctl], [0.1], [http://www.brontes3d.com/opensource])
AM_INIT_AUTOMAKE([dist-bzip2 -Wno-portability])

AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_LANG([C])
AC_PROG_CC
AM_PROG_CC_C_O

AC_CONFIG_FILES([
    Makefile
    src/Makefile
    src/bin/Makefile
    src/libwrtctl/Makefile
    src/mods/Makefile
    test/Makefile
])

AC_CONFIG_HEADERS([config.h])

AC_OUTPUT

